course_work/antlr/PascalParser.py
# Generated from Pascal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalParser ( Parser ):

    grammarFileName = "Pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", 
                     "'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'DIV'", "'DO'", 
                     "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
                     "'IF'", "'IN'", "'INTEGER'", "'MOD'", "'NIL'", "'NOT'", 
                     "'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", 
                     "'REAL'", "'RECORD'", "'REPEAT'", "'SET'", "'THEN'", 
                     "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", 
                     "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", 
                     "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", 
                     "')'", "'['", "'(.'", "']'", "'.)'", "'^'", "'@'", 
                     "'.'", "'..'", "'{'", "'}'", "'UNIT'", "'INTERFACE'", 
                     "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", 
                     "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", 
                      "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", 
                      "END", "FILE", "FOR", "FUNCTION", "IF", "IN", "INTEGER", 
                      "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", 
                      "PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", 
                      "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", "PLUS", 
                      "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", 
                      "COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", 
                      "LPAREN", "RPAREN", "LBRACK", "LBRACK2", "RBRACK", 
                      "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", 
                      "RCURLY", "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", 
                      "TRUE", "FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", 
                      "STRING_LITERAL", "NUM_INT", "NUM_REAL" ]

    RULE_program = 0
    RULE_programHeading = 1
    RULE_identifier = 2
    RULE_block = 3
    RULE_usesUnitsPart = 4
    RULE_constantDefinitionPart = 5
    RULE_constantDefinition = 6
    RULE_constantChr = 7
    RULE_constant = 8
    RULE_unsignedNumber = 9
    RULE_unsignedInteger = 10
    RULE_unsignedReal = 11
    RULE_sign = 12
    RULE_bool_ = 13
    RULE_string = 14
    RULE_typeDefinitionPart = 15
    RULE_typeDefinition = 16
    RULE_functionType = 17
    RULE_procedureType = 18
    RULE_type_ = 19
    RULE_simpleType = 20
    RULE_scalarType = 21
    RULE_subrangeType = 22
    RULE_typeIdentifier = 23
    RULE_structuredType = 24
    RULE_unpackedStructuredType = 25
    RULE_stringtype = 26
    RULE_arrayType = 27
    RULE_typeList = 28
    RULE_indexType = 29
    RULE_componentType = 30
    RULE_recordType = 31
    RULE_fieldList = 32
    RULE_fixedPart = 33
    RULE_recordSection = 34
    RULE_setType = 35
    RULE_baseType = 36
    RULE_fileType = 37
    RULE_pointerType = 38
    RULE_variableDeclarationPart = 39
    RULE_variableDeclaration = 40
    RULE_procedureAndFunctionDeclarationPart = 41
    RULE_procedureOrFunctionDeclaration = 42
    RULE_procedureDeclaration = 43
    RULE_formalParameterList = 44
    RULE_formalParameterSection = 45
    RULE_parameterGroup = 46
    RULE_identifierList = 47
    RULE_constList = 48
    RULE_functionDeclaration = 49
    RULE_resultType = 50
    RULE_statement = 51
    RULE_simpleStatement = 52
    RULE_assignmentStatement = 53
    RULE_variable = 54
    RULE_expression = 55
    RULE_relationaloperator = 56
    RULE_simpleExpression = 57
    RULE_additiveoperator = 58
    RULE_term = 59
    RULE_multiplicativeoperator = 60
    RULE_signedFactor = 61
    RULE_factor = 62
    RULE_unsignedConstant = 63
    RULE_functionDesignator = 64
    RULE_parameterList = 65
    RULE_set_ = 66
    RULE_elementList = 67
    RULE_element = 68
    RULE_procedureStatement = 69
    RULE_actualParameter = 70
    RULE_parameterwidth = 71
    RULE_emptyStatement_ = 72
    RULE_structuredStatement = 73
    RULE_compoundStatement = 74
    RULE_statements = 75
    RULE_conditionalStatement = 76
    RULE_ifStatement = 77
    RULE_repetetiveStatement = 78
    RULE_whileStatement = 79
    RULE_forStatement = 80
    RULE_forList = 81
    RULE_initialValue = 82
    RULE_finalValue = 83

    ruleNames =  [ "program", "programHeading", "identifier", "block", "usesUnitsPart", 
                   "constantDefinitionPart", "constantDefinition", "constantChr", 
                   "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
                   "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
                   "functionType", "procedureType", "type_", "simpleType", 
                   "scalarType", "subrangeType", "typeIdentifier", "structuredType", 
                   "unpackedStructuredType", "stringtype", "arrayType", 
                   "typeList", "indexType", "componentType", "recordType", 
                   "fieldList", "fixedPart", "recordSection", "setType", 
                   "baseType", "fileType", "pointerType", "variableDeclarationPart", 
                   "variableDeclaration", "procedureAndFunctionDeclarationPart", 
                   "procedureOrFunctionDeclaration", "procedureDeclaration", 
                   "formalParameterList", "formalParameterSection", "parameterGroup", 
                   "identifierList", "constList", "functionDeclaration", 
                   "resultType", "statement", "simpleStatement", "assignmentStatement", 
                   "variable", "expression", "relationaloperator", "simpleExpression", 
                   "additiveoperator", "term", "multiplicativeoperator", 
                   "signedFactor", "factor", "unsignedConstant", "functionDesignator", 
                   "parameterList", "set_", "elementList", "element", "procedureStatement", 
                   "actualParameter", "parameterwidth", "emptyStatement_", 
                   "structuredStatement", "compoundStatement", "statements", 
                   "conditionalStatement", "ifStatement", "repetetiveStatement", 
                   "whileStatement", "forStatement", "forList", "initialValue", 
                   "finalValue" ]

    EOF = Token.EOF
    AND=1
    ARRAY=2
    BEGIN=3
    BOOLEAN=4
    CASE=5
    CHAR=6
    CHR=7
    CONST=8
    DIV=9
    DO=10
    DOWNTO=11
    ELSE=12
    END=13
    FILE=14
    FOR=15
    FUNCTION=16
    IF=17
    IN=18
    INTEGER=19
    MOD=20
    NIL=21
    NOT=22
    OF=23
    OR=24
    PACKED=25
    PROCEDURE=26
    PROGRAM=27
    REAL=28
    RECORD=29
    REPEAT=30
    SET=31
    THEN=32
    TO=33
    TYPE=34
    UNTIL=35
    VAR=36
    WHILE=37
    WITH=38
    PLUS=39
    MINUS=40
    STAR=41
    SLASH=42
    ASSIGN=43
    COMMA=44
    SEMI=45
    COLON=46
    EQUAL=47
    NOT_EQUAL=48
    LT=49
    LE=50
    GE=51
    GT=52
    LPAREN=53
    RPAREN=54
    LBRACK=55
    LBRACK2=56
    RBRACK=57
    RBRACK2=58
    POINTER=59
    AT=60
    DOT=61
    DOTDOT=62
    LCURLY=63
    RCURLY=64
    UNIT=65
    INTERFACE=66
    USES=67
    STRING=68
    IMPLEMENTATION=69
    TRUE=70
    FALSE=71
    WS=72
    COMMENT_1=73
    COMMENT_2=74
    IDENT=75
    STRING_LITERAL=76
    NUM_INT=77
    NUM_REAL=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programHeading(self):
            return self.getTypedRuleContext(PascalParser.ProgramHeadingContext,0)


        def block(self):
            return self.getTypedRuleContext(PascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(PascalParser.DOT, 0)

        def EOF(self):
            return self.getToken(PascalParser.EOF, 0)

        def INTERFACE(self):
            return self.getToken(PascalParser.INTERFACE, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.programHeading()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==66:
                self.state = 169
                self.match(PascalParser.INTERFACE)


            self.state = 172
            self.block()
            self.state = 173
            self.match(PascalParser.DOT)
            self.state = 174
            self.match(PascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramHeadingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PascalParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(PascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def UNIT(self):
            return self.getToken(PascalParser.UNIT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_programHeading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramHeading" ):
                listener.enterProgramHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramHeading" ):
                listener.exitProgramHeading(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramHeading" ):
                return visitor.visitProgramHeading(self)
            else:
                return visitor.visitChildren(self)




    def programHeading(self):

        localctx = PascalParser.ProgramHeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programHeading)
        self._la = 0 # Token type
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(PascalParser.PROGRAM)
                self.state = 177
                self.identifier()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==53:
                    self.state = 178
                    self.match(PascalParser.LPAREN)
                    self.state = 179
                    self.identifierList()
                    self.state = 180
                    self.match(PascalParser.RPAREN)


                self.state = 184
                self.match(PascalParser.SEMI)
                pass
            elif token in [65]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(PascalParser.UNIT)
                self.state = 187
                self.identifier()
                self.state = 188
                self.match(PascalParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PascalParser.IDENT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = PascalParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(PascalParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(PascalParser.CompoundStatementContext,0)


        def constantDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ConstantDefinitionPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.ConstantDefinitionPartContext,i)


        def typeDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.TypeDefinitionPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.TypeDefinitionPartContext,i)


        def variableDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.VariableDeclarationPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.VariableDeclarationPartContext,i)


        def procedureAndFunctionDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ProcedureAndFunctionDeclarationPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.ProcedureAndFunctionDeclarationPartContext,i)


        def usesUnitsPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.UsesUnitsPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.UsesUnitsPartContext,i)


        def IMPLEMENTATION(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.IMPLEMENTATION)
            else:
                return self.getToken(PascalParser.IMPLEMENTATION, i)

        def getRuleIndex(self):
            return PascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 8)) & ~0x3f) == 0 and ((1 << (_la - 8)) & 2882303761852924161) != 0):
                self.state = 200
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 194
                    self.constantDefinitionPart()
                    pass
                elif token in [34]:
                    self.state = 195
                    self.typeDefinitionPart()
                    pass
                elif token in [36]:
                    self.state = 196
                    self.variableDeclarationPart()
                    pass
                elif token in [16, 26]:
                    self.state = 197
                    self.procedureAndFunctionDeclarationPart()
                    pass
                elif token in [67]:
                    self.state = 198
                    self.usesUnitsPart()
                    pass
                elif token in [69]:
                    self.state = 199
                    self.match(PascalParser.IMPLEMENTATION)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 205
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesUnitsPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self):
            return self.getToken(PascalParser.USES, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_usesUnitsPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesUnitsPart" ):
                listener.enterUsesUnitsPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesUnitsPart" ):
                listener.exitUsesUnitsPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsesUnitsPart" ):
                return visitor.visitUsesUnitsPart(self)
            else:
                return visitor.visitChildren(self)




    def usesUnitsPart(self):

        localctx = PascalParser.UsesUnitsPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_usesUnitsPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(PascalParser.USES)
            self.state = 208
            self.identifierList()
            self.state = 209
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDefinitionPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(PascalParser.CONST, 0)

        def constantDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ConstantDefinitionContext)
            else:
                return self.getTypedRuleContext(PascalParser.ConstantDefinitionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.SEMI)
            else:
                return self.getToken(PascalParser.SEMI, i)

        def getRuleIndex(self):
            return PascalParser.RULE_constantDefinitionPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDefinitionPart" ):
                listener.enterConstantDefinitionPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDefinitionPart" ):
                listener.exitConstantDefinitionPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDefinitionPart" ):
                return visitor.visitConstantDefinitionPart(self)
            else:
                return visitor.visitChildren(self)




    def constantDefinitionPart(self):

        localctx = PascalParser.ConstantDefinitionPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constantDefinitionPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(PascalParser.CONST)
            self.state = 215 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 212
                self.constantDefinition()
                self.state = 213
                self.match(PascalParser.SEMI)
                self.state = 217 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==75):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(PascalParser.IdentifierContext,0)


        def EQUAL(self):
            return self.getToken(PascalParser.EQUAL, 0)

        def constant(self):
            return self.getTypedRuleContext(PascalParser.ConstantContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_constantDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDefinition" ):
                listener.enterConstantDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDefinition" ):
                listener.exitConstantDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDefinition" ):
                return visitor.visitConstantDefinition(self)
            else:
                return visitor.visitChildren(self)




    def constantDefinition(self):

        localctx = PascalParser.ConstantDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constantDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self.identifier()
            self.state = 220
            self.match(PascalParser.EQUAL)
            self.state = 221
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantChrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHR(self):
            return self.getToken(PascalParser.CHR, 0)

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def unsignedInteger(self):
            return self.getTypedRuleContext(PascalParser.UnsignedIntegerContext,0)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_constantChr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantChr" ):
                listener.enterConstantChr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantChr" ):
                listener.exitConstantChr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantChr" ):
                return visitor.visitConstantChr(self)
            else:
                return visitor.visitChildren(self)




    def constantChr(self):

        localctx = PascalParser.ConstantChrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constantChr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(PascalParser.CHR)
            self.state = 224
            self.match(PascalParser.LPAREN)
            self.state = 225
            self.unsignedInteger()
            self.state = 226
            self.match(PascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

